syntax = "proto3";

package pb_schemas.notification.v1;

import "google/protobuf/timestamp.proto";

option go_package = "ops-monorepo/protogen/go/notification/v1;notificationv1";

// Email request message
message SendEmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
  string from = 4;
  bool is_html = 5;
}

// Email response message
message SendEmailResponse {
  bool success = 1;
  string message = 2;
  string email_id = 3;
  google.protobuf.Timestamp timestamp = 4;
}

// Notification Service
service NotificationService {
  rpc SendEmail (SendEmailRequest) returns (SendEmailResponse) {};
}